--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ affiliation: The University of Queensland
 subaffiliation: School of EECS
 affiliation_link: https://www.uq.edu.au/
 subaffiliation_link: https://eecs.uq.edu.au/
-email: zihan.wang@uq.edu.au
-address: Building 78, University of Queensland, QLD 4072
+email: zihan.wang[at]uq[dot]edu[dot]au
+# address: Building 78, UQ St Lucia, QLD 4072
 # address_link: https://goo.gl/maps/aQZfmiKjQmqbDsVY9
 
 
