--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ linkedin: https://www.linkedin.com/in/zihan-wang-68675a231/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/zihan_wang.jpg
+avatar: ./assets/img/zihan.png
 # logo: ./assets/img/logo.png
 favicon: ./assets/img/andrew.png
 favicon_dark: ./assets/img/favicon-dark.png
