--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: "www.zihan.com.au "
+url: "https://www.zihan.com.au"
 # baseurl: /Hanchao-Zhang.github.io
-# Basic Information 
+# Basic Information
 title: Zihan Wang
 # subtitle:
 position: Ph.D. Student
@@ -21,7 +21,7 @@ keywords: minimal light
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
 
-# Links 
+# Links
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=5tre4J4AAAAJ&hl=en
 # cv_link: assets/files/HanchaoZhangCV.pdf
@@ -29,8 +29,8 @@ google_scholar: https://scholar.google.com/citations?user=5tre4J4AAAAJ&hl=en
 linkedin: https://www.linkedin.com/in/zihan-wang-68675a231/
 # twitter: https://twitter.com/
 
-# Images (e.g., your profile picture and your website's favicon) 
-# "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
+# Images (e.g., your profile picture and your website's favicon)
+# "favicon" and "favicon_dark" are used for the light and dark modes, respectively.
 avatar: ./assets/img/zihan.png
 # logo: ./assets/img/logo.png
 favicon: ./assets/img/andrew.png
